[project]
name = "qralib"
version = "0.1.0"
description = "Quantitative Risk Analysis in Cybersecurity Library (QRALib)"
authors = [
    {name = "samlothen",email = "70292711+samlothen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
numpy = "^2.2.5"
plotly = "^6.0.1"
scipy = "^1.15.3"
pandas = "^2.2.3"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
