[project]
name = "qralib"
version = "0.1.0"
description = "Quantitative Risk Analysis in Cybersecurity Library (QRALib)"
authors = [
    {name = "samlothen",email = "70292711+samlothen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "joblib (>=1.5.0,<2.0.0)",
    "salib (>=1.5.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
numpy = "^2.2.5"
scipy = "^1.15.3"
pandas = "^2.2.3"
pytest = "^8.3.5"

[tool.poetry.extras]
viz = ["plotly>=5.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
